--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ button{
     cursor: pointer;
 }
 
+button:hover{
+    background-color: #651f71;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
 .container{
     background-color: #ffebcd;
     padding: 40px;
@@ -49,6 +54,7 @@ button{
     border-color: #000;
     border-width: medium;
     border-radius: 50%; 
+    border-style: solid;
 }
 
 .red-light{
